--- a/Examensarbete_utvecklingsdelen/index.html
+++ b/Examensarbete_utvecklingsdelen/index.html
@@ -13,13 +13,13 @@
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
 
-  <title>Swedbank | Card for Aktiellt</title>
+  <title>Aktuellt | Card for the securities web page</title>
 </head>
 
 <body>
   <header>
-    <h1>Remake of card for Aktiellt</h1>
-    <p>These two versions show the before and after for the card linking to the external web page Aktiellt in the app.
+    <h1>Remake of card for Aktuellt</h1>
+    <p>These two versions show the before and after for the card linking to the external securities web page in the app.
     </p>
   </header>
 
@@ -34,9 +34,9 @@
         <div class="card">
           <div class="card-content">
             <div class="cardtext-area">
-              <h3 class="card-header">Aktiellt</h3>
-                <p class="card-paragraph">Håll dig uppdaterad och få inspiration genom vår nättidning. Här får du både
-                  placeringstips och andra intressanta artiklar om vad som händer på marknaden.</p>
+              <h3 class="card-header">Aktuellt</h3>
+              <p class="card-paragraph">Håll dig uppdaterad och få inspiration genom vår nättidning. Här får du både
+                placeringstips och andra intressanta artiklar om vad som händer på marknaden.</p>
             </div>
             <div class="card-image">
               <img src="img/Icon_old.png" alt="Illustration. Hand som klickar på mobiltelefon.">
@@ -52,9 +52,9 @@
         <div class="card">
           <div class="card-content">
             <div class="cardtext-area">
-              <h3 class="card-header">Aktiellt</h3>
-                <p class="card-paragraph">Håll dig uppdaterad och få inspiration genom vår nättidning. Här får du både
-                  placeringstips och andra intressanta artiklar om vad som händer på marknaden.</p>
+              <h3 class="card-header">Aktuellt</h3>
+              <p class="card-paragraph">Håll dig uppdaterad och få inspiration genom vår nättidning. Här får du både
+                placeringstips och andra intressanta artiklar om vad som händer på marknaden.</p>
             </div>
             <div class="card-image">
               <img src="img/Icon_New.png" alt="Illustration. Hand som klickar på mobiltelefon.">
@@ -63,7 +63,7 @@
           <div class="link-area">
             <img src="img/External Link.svg" alt="Ikon som visar att länken leder till en extern sida"
               class="link-icon">
-            <a href="https://www.swedbank-aktiellt.se/" class="card-link">Ta mig till Aktiellt</a>
+            <a href="https://www.swedbank-aktiellt.se/" class="card-link">Ta mig till Aktuellt</a>
           </div>
         </div>
       </section>
@@ -73,7 +73,7 @@
   <footer>
     <p>Deniz Isaksson | 2024</p>
     <br>
-    <p>En del av examesarbetet för UXF22</p>
+    <p>En del av examensarbetet för UXF22</p>
   </footer>
 </body>
 
